// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[P12-8] GUARD: unconnected Source and Terminal element trees equal master source, no ringGapSides 1`] = `
<Svg
  height={40}
  viewBox="0 0 40 40"
  width={40}
>
  <Circle
    cx="20"
    cy="20"
    fill="#0e1f36"
    r="16"
    stroke="#f0b429"
    strokeWidth="2"
  />
  <Circle
    cx="20"
    cy="20"
    fill="#060e1a"
    r="10"
    stroke="#f0b429"
    strokeOpacity="0.5"
    strokeWidth="1.2"
  />
  <Path
    d="M 17 13 L 17 27 L 27 20 Z"
    fill="#f0b429"
  />
</Svg>
`;

exports[`[P12-8] GUARD: unconnected Source and Terminal element trees equal master terminal, no ringGapSides 1`] = `
<Svg
  height={40}
  viewBox="0 0 40 40"
  width={40}
>
  <Circle
    cx="20"
    cy="20"
    fill="#0e1f36"
    r="16"
    stroke="#4ecb8d"
    strokeWidth="2"
  />
  <Circle
    cx="20"
    cy="20"
    fill="#060e1a"
    r="9"
    stroke="#4ecb8d"
    strokeWidth="1.5"
  />
  <Circle
    cx="20"
    cy="20"
    fill="#4ecb8d"
    r="4"
  />
  <Path
    d="M 6 6 L 9 6 M 6 6 L 6 9"
    opacity="0.5"
    stroke="#4ecb8d"
    strokeLinecap="round"
    strokeWidth="1.2"
  />
  <Path
    d="M 34 6 L 31 6 M 34 6 L 34 9"
    opacity="0.5"
    stroke="#4ecb8d"
    strokeLinecap="round"
    strokeWidth="1.2"
  />
  <Path
    d="M 6 34 L 9 34 M 6 34 L 6 31"
    opacity="0.5"
    stroke="#4ecb8d"
    strokeLinecap="round"
    strokeWidth="1.2"
  />
  <Path
    d="M 34 34 L 31 34 M 34 34 L 34 31"
    opacity="0.5"
    stroke="#4ecb8d"
    strokeLinecap="round"
    strokeWidth="1.2"
  />
</Svg>
`;
